<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ececec"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="25dp"
        android:paddingLeft="25dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_list_black_48dp" />

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="6dp"
            android:ellipsize="end"
            android:text="@string/show_all"
            android:textColor="@color/MAIN_ROW_TITLE"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout style="@style/main_header_buttons" android:id="@+id/btn_ll_warning">
            <TextView style="@style/main_header_buttons_count"
                android:id="@+id/txt_warning_count" />
            <TextView style="@style/main_header_buttons_title"
                android:text="@string/title_warning" />
        </LinearLayout>
        <LinearLayout style="@style/main_header_buttons" android:id="@+id/btn_ll_working">
            <TextView style="@style/main_header_buttons_count"
                android:id="@+id/txt_working_count" />
            <TextView style="@style/main_header_buttons_title"
                android:text="@string/title_working" />
        </LinearLayout>
        <LinearLayout style="@style/main_header_buttons" android:id="@+id/btn_ll_complete">
            <TextView style="@style/main_header_buttons_count"
                android:id="@+id/txt_complete_count" />
            <TextView style="@style/main_header_buttons_title"
                android:text="@string/title_complete" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
